# TCPClientServer

./: CMakeLists.txt  README.md
TCPClient/: CMakeLists.txt  main.cpp
TCPNetworking/: CMakeLists.txt
TCPNetworking/include/TCPNetworking/: tcp_connection.h  tcp_server.h
TCPNetworking/include/TCPNetworking/client/: tcp_client.h
TCPNetworking/include/TCPNetworking/server/: tcp_connection.h  tcp_server.h
TCPNetworking/src/: tcp_connection.cpp  tcp_server.cpp
TCPNetworking/src/client/: tcp_client.cpp
TCPNetworking/src/server/: tcp_connection.cpp  tcp_server.cpp
TCPServer/: CMakeLists.txt  main.cpp
